Aligned all the boxes and buttons so it should ACTUALLY align correctly. It might differ by screen size/resolution though.

--- a/src/app/components/available-slots/available-slots.component.css
+++ b/src/app/components/available-slots/available-slots.component.css
@@ -14,15 +14,16 @@ h1, p {
 button {
     background-color: #000000;
     border: none;
-    width: 150px;
+    width: 250px;
     border-radius: 10px;
-    padding: 10px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-left: 25%;
-    margin-top: 8px;
+    position: relative;
+    left: 50%;
+    margin-left: -125px;
+    margin-top: 5px;
 }
 
 button:hover {
