--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -4,8 +4,11 @@ p {
 }
 
 input[type="text"] {
-  width: 270px;
-  margin-left: 41%;
+  width: 250px;
+  position: relative;
+  left: 50%;
+  margin-left: -125px;
+  margin-bottom: 5px;
 }
 
 label {
@@ -27,14 +30,15 @@ label {
 #logOut,
 #upload {
   background-color: #000000;
-  border: none;
-  width: 270px;
-  border-radius: 10px;
-  padding: 10px 15px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-top: 5px;
-  margin-left: 41%;
+    border: none;
+    width: 250px;
+    border-radius: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    position: relative;
+    left: 50%;
+    margin-left: -125px;
+    margin-top: 5px;
 }
